--- a/flappy_bird/pubspec.yaml
+++ b/flappy_bird/pubspec.yaml
@@ -63,6 +63,11 @@ flutter:
     - assets/images/
     - assets/audio/
 
+  fonts:
+    - family: Game
+      fonts:
+        - asset: assets/fonts/Game.ttf
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
